<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/bg_simple"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/strangerLoginLogo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.60"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/please_login_to_continue"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/strangerLoginLogo"
        app:layout_constraintStart_toStartOf="@id/strangerLoginLogo"
        app:layout_constraintTop_toBottomOf="@id/strangerLoginLogo" />

    <LinearLayout
        android:id="@+id/loginLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/bg_linear"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/loginText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:src="@drawable/google"
            tools:ignore="ContentDescription"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_google"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_gravity="center"/>
    </LinearLayout>
    <TextView
        android:id="@+id/loginPrivacyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/by_continuing_you_are_agreeing_our_terms_and_privacy_policy"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/loginLinearLayout"
        app:layout_constraintStart_toStartOf="@id/loginLinearLayout"
        app:layout_constraintTop_toBottomOf="@id/loginLinearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>