<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blur"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/topMainLogo"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:src="@drawable/logo"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"/>
    <LinearLayout
        android:id="@+id/linearCoinsMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grey_coins"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/topMainLogo"
        app:layout_constraintEnd_toStartOf="@id/linearTreasureMain"
        app:layout_constraintBottom_toBottomOf="@id/topMainLogo"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/coinsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_have_50"
            android:textColor="@color/white"
            android:textSize="15sp"/>
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_coin"
            android:layout_marginStart="5dp"
            tools:ignore="ContentDescription"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearTreasureMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grey_coins"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/topMainLogo"
        app:layout_constraintBottom_toBottomOf="@id/topMainLogo"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_treasure_chest"
            android:layout_marginStart="5dp"
            tools:ignore="ContentDescription"/>
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/mainRadar"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/radar"
        app:lottie_autoPlay="true"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/topMainLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/mainProfileImage"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        android:src="@drawable/demo_user"
        app:layout_constraintStart_toStartOf="@id/mainRadar"
        app:layout_constraintBottom_toBottomOf="@id/mainRadar"
        app:layout_constraintTop_toTopOf="@id/mainRadar"
        app:layout_constraintEnd_toEndOf="@id/mainRadar"/>
    <TextView
        android:id="@+id/mainAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_100"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/mainRadar"
        app:layout_constraintStart_toStartOf="@id/mainRadar"
        app:layout_constraintEnd_toEndOf="@id/mainRadar"
        android:textSize="36sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/mainRandomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/person_looking_for_random_people_n_click_find_and_talk_with_them"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/mainAge"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="@id/mainAge"
        app:layout_constraintTop_toBottomOf="@id/mainAge" />

    <LinearLayout
        android:id="@+id/linearCoinsUsing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_grey_coins"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="@id/mainRandomText"
        app:layout_constraintEnd_toEndOf="@id/mainRandomText"
        app:layout_constraintTop_toBottomOf="@id/mainRandomText">

        <TextView
            android:id="@+id/coinsUsingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coins_5"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_coin"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <ImageView
        android:id="@+id/mainBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_blur"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />
    <Button
        android:id="@+id/mainFindBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/find"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/mainRadar"
        app:layout_constraintEnd_toEndOf="@id/mainRadar"
        app:layout_constraintTop_toBottomOf="@id/linearCoinsUsing"
        android:layout_marginTop="24dp"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/green"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/mainProgress"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/progressloading" />
    <androidx.constraintlayout.widget.Group
        android:id="@+id/loadingGroup"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="mainBackground,mainProgress" />
</androidx.constraintlayout.widget.ConstraintLayout>